# student-accounting-system

./: pyproject.toml
project/: db.sqlite3
project/project/: settings.py
